Updated template based on Rhys'

--- a/cplusplus.html
+++ b/cplusplus.html
@@ -104,7 +104,7 @@
 <hr/>
 Table of Contents (<a href="#" onclick="var expanded=this.innerHTML==='expand'; var subtopics=document.getElementsByClassName('subtopic'); for (var i = 0; i < subtopics.length; i++) { subtopics[i].style.display=(expanded ? '' : 'none'); } this.innerHTML=(expanded ? 'collapse' : 'expand');">expand</a>)
 <ol>
-    <li><a href="#intro"> Introduction </a> <ol class="subtopic" style="display: none;">
+    <li><a href="#intro"> Introduction to C </a> <ol class="subtopic" style="display: none;">
         <li><a href="#intro1"> About C Language </a></li>
         <li><a href="#intro2"> About C Programs </a></li>
         <li><a href="#intro3"> Comparing C and Java Programs </a></li>
@@ -119,11 +119,16 @@ Table of Contents (<a href="#" onclick="var expanded=this.innerHTML==='expand'; 
         <li><a href="#mallocfree2"> Memory Horrors </a></li>
         <li><a href="#mallocfree3"> Valgrind </a></li>
     </ol></li>
+    <li><a href="#structs"> Structures and Pointers </a></li>
+    <li><a href="#arrays"> Pointer Arithmetic and Arrays </a></li>
+    <li><a href="trees"> Typed Trees and Tree Walking </a></li>
+    <li><a href="#cpp"> Introduction to C++ </a></li>
+    <li><a href="#templates"> Templates </a></li>
 </ol>
 
 <hr/>
 
-<h2 id="intro"> 1 &ndash; Introduction </h2>
+<h2 id="intro"> 1 &ndash; Introduction to C </h2>
 <p> Comparing C, C++ and Java. <br/> They all have core imperative language that includes assignment
 while, functions and recursion. </p>
 <ul>
