--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@
     <title> Notes for exam! </title>
     <style type="text/css">
         body {
-            background-color: lavender;
-            font-family: Verdana, serif;
+            font-family: "Century Gothic", serif;
+            margin: 50px;
+        }
+
+        h1 {
+            color: #2e4566;
+        }
+
+        h2 {
+            text-decoration: underline;
+            color: #2f5496;
+        }
+
+        h3 {
+            color: #5b9bd5;
+        }
+
+        h4 {
+            font-weight: normal;
+            color: #70c4f5;
+        }
+
+        hr {
+            border-color: #59a7ea;
         }
 
         ul > li {
@@ -28,7 +50,7 @@
         }
 
         table th {
-            background-color: #2571ff;
+            background-color: #3460a9;
             color: ghostwhite;
             font-weight: bold;
         }
@@ -94,10 +116,12 @@
     </script>
 </head>
 <body onload="checkCookie()">
-    <h1> Exam Notes May/June 2017 </h1>
-    <p id="name"> Welcome! </p>
-    <a href="progress.html"> Progress </a>
-    <table>
+<hr/>
+    <h1 align="center"> Exam Notes May/June 2017 </h1>
+    <p align="center" id="name"> Welcome! </p>
+<hr/>
+    <a href="progress.html"> <p align="center">Progress</p> </a>
+    <table align="center" style="font-family: Verdana, serif;">
         <caption> Exam Schedule </caption>
         <tr style="font-weight: bold;">
             <th> Day </th>
@@ -320,8 +344,8 @@
 
     Click on respective Exam Titles to view its notes.
 
-    <h3> Revision Week Timetable (<a href="https://www.cs.bham.ac.uk/internal/timetables/TT-Yr2-RW.pdf" download>Download</a>) </h3>
-    <div id="paper" style="display: inline-block; width: 100%; height: 800px; border: 1px solid black;" onclick="openPaper();"><p style="width: 100%; height: 100%; display: table-cell;vertical-align: middle; text-align: center"> Click this box to load PDF </p></div>
+    <h3 align="center"> Revision Week Timetable (<a href="https://www.cs.bham.ac.uk/internal/timetables/TT-Yr2-RW.pdf" download>Download</a>) </h3>
+    <div align="" id="paper" style="display: inline-block; width: 100%; height: 800px; border: 1px solid black;" onclick="openPaper();"><p style="width: 100%; height: 100%; display: table-cell;vertical-align: middle; text-align: center"> Click this box to load PDF </p></div>
 
 </body>
 </html>
