--- a/softeng.html
+++ b/softeng.html
@@ -276,7 +276,7 @@ Table of contents (<a href="#" onclick="var expanded=this.innerHTML==='expand'; 
     </ul></li>
 
     <li> <keyword> Integration and system testing </keyword> <ul>
-        <li> System testing: Testing the system as a while. Testing of emergent properties is particularly important. </li>
+        <li> System testing: Testing the system as a whole. Testing of emergent properties is particularly important. </li>
         <li> Acceptance testing: Testing with customer data to check that the system meets the customer's needs. </li>
     </ul></li>
 
@@ -332,7 +332,7 @@ Table of contents (<a href="#" onclick="var expanded=this.innerHTML==='expand'; 
 <img src="images/softeng/models7.JPG"/>
 
 
-<h3 id="models6"> 1.6 &ndash; Rational Unified Process (RUP) </h3>
+<h3 id="models6"> 2.6 &ndash; Rational Unified Process (RUP) </h3>
 <img src="images/softeng/models8.JPG"/>
 <p> There are four RUP phases </p>
 <ol>
@@ -430,7 +430,7 @@ Table of contents (<a href="#" onclick="var expanded=this.innerHTML==='expand'; 
 <p> The <keyword>environment</keyword> of a system is the set of elements which are NOT part of the system, but a change in any of which can produce a change in the state of the system. </p>
 
 <h3 id="system1"> 4.1 &ndash; Critical Systems </h3>
-<p> <keyword>Critical system</keyword> is a system where failure can lead to high economic loss, physical damage, or threats ot life. There are three critical systems: </p>
+<p> <keyword>Critical system</keyword> is a system where failure can lead to high economic loss, physical damage, or threats to life. There are three critical systems: </p>
 <ul>
     <li><keyword>Safety-critical</keyword><ul>
         <li> Failure results in loss of life, injury or damage to the environment. </li>
