Progress bars now in home page + Updated all template based on Rhys'

--- a/progress.html
+++ b/progress.html
@@ -51,6 +51,7 @@
 </head>
 <body>
 <h2> Progress </h2>
+<h1 style="color:red"> WOOOTT You found a hidden page! You hacker! Well done! Too bad this isn't used anymore though. Easter egg for you HAHA. </h1>
 <!-- Change value and max after finishing the table of contents for each module -->
 Software Engineering <br>
 <progress class="module" value="18" max="18"></progress> <span class="percentage"></span> <br><br>
