--- a/vision.html
+++ b/vision.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--[if lt IE 9]>
+    <script> document.createElement("keyword"); document.createElement("comment"); </script>
+    <![endif]-->
+
     <meta charset="UTF-8">
     <title> Computational Vision </title>
     <style type="text/css">
         body {
-            background-color: #ffe6b3;
-            font-family: "Georgia", serif;
+            font-family: "Century Gothic", serif;
+            margin: 50px;
+        }
+
+        keyword {
+            font-weight: bold;
+            color: #c976c6;
+        }
+
+        comment {
+            font-family: Consolas, monospace;
+            color: #b8b8b8;
+        }
+
+        code {
+            font-family: Consolas, monospace;
+            color: blueviolet;
+        }
+
+        pre {
+            margin:10px;
+            font-family: Consolas, monospace;
+            color: #4913d3;
+        }
+
+        h1 {
+            color: #2e4566;
+        }
+
+        h2 {
+            text-decoration: underline;
+            color: #2f5496;
+        }
+
+        h3 {
+            color: #5b9bd5;
+        }
+
+        h4 {
+            font-weight: normal;
+            color: #70c4f5;
+        }
+
+        hr {
+            border-color: #59a7ea;
         }
 
         #topBtn {
@@ -17,7 +64,7 @@
             z-index: 99;
             border: none;
             outline: none;
-            background-color: red;
+            background-color: #3460a9;
             color: white;
             cursor: pointer;
             padding: 15px;
@@ -26,6 +73,7 @@
 
         #topBtn:hover {
             background-color: #555;
+            opacity: 0.5;
         }
 
         #homeBtn {
@@ -36,7 +84,7 @@
             z-index: 99;
             border: none;
             outline: none;
-            background-color: red;
+            background-color: #3460a9;
             color: white;
             cursor: pointer;
             padding: 15px;
@@ -45,8 +93,8 @@
 
         #homeBtn:hover {
             background-color: #555;
+            opacity: 0.5;
         }
-
         table, tr, td {
             border: 1px solid #000000;
             border-collapse: collapse;
@@ -64,7 +112,8 @@
 </head>
 <body>
 <hr/>
-    <h1> LI Computational Vision </h1>
+<h1 align="center"> LI Computational Vision </h1>
+<p align="center"> Template and style original: <keyword>Rhys Barrett</keyword>. </p>
 <hr/>
 Table of contents
 <ol>
