--- a/csa.html
+++ b/csa.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--[if lt IE 9]>
+    <script> document.createElement("keyword"); document.createElement("comment"); </script>
+    <![endif]-->
+
     <meta charset="UTF-8">
     <title> Computer Systems and Architecture </title>
     <style type="text/css">
         body {
-            background-color: #ffe6b3;
-            font-family: "Georgia", serif;
+            font-family: "Century Gothic", serif;
+            margin: 50px;
+        }
+
+        keyword {
+            font-weight: bold;
+            color: #c976c6;
+        }
+
+        comment {
+            font-family: Consolas, monospace;
+            color: #b8b8b8;
+        }
+
+        code {
+            font-family: Consolas, monospace;
+            color: blueviolet;
+        }
+
+        pre {
+            margin:10px;
+            font-family: Consolas, monospace;
+            color: #4913d3;
+        }
+
+        h1 {
+            color: #2e4566;
+        }
+
+        h2 {
+            text-decoration: underline;
+            color: #2f5496;
+        }
+
+        h3 {
+            color: #5b9bd5;
+        }
+
+        h4 {
+            font-weight: normal;
+            color: #70c4f5;
+        }
+
+        hr {
+            border-color: #59a7ea;
         }
 
         #topBtn {
@@ -17,7 +64,7 @@
             z-index: 99;
             border: none;
             outline: none;
-            background-color: red;
+            background-color: #3460a9;
             color: white;
             cursor: pointer;
             padding: 15px;
@@ -26,6 +73,7 @@
 
         #topBtn:hover {
             background-color: #555;
+            opacity: 0.5;
         }
 
         #homeBtn {
@@ -36,7 +84,7 @@
             z-index: 99;
             border: none;
             outline: none;
-            background-color: red;
+            background-color: #3460a9;
             color: white;
             cursor: pointer;
             padding: 15px;
@@ -45,34 +93,42 @@
 
         #homeBtn:hover {
             background-color: #555;
+            opacity: 0.5;
         }
     </style>
 </head>
 <body>
 <hr/>
-    <h1> LI Computer Systems and Architecture </h1>
+<h1 align="center"> LI Computer Systems and Architecture </h1>
+<p align="center"> Template and style original:
+    <keyword>Rhys Barrett</keyword>
+    .
+</p>
+
 <hr/>
 
-    <!-- Utils -->
-    <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
-    <script>
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function() {scrollFunction()};
+<!-- Utils -->
+<button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
+<script>
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () {
+        scrollFunction()
+    };
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("topBtn").style.display = "block";
-            } else {
-                document.getElementById("topBtn").style.display = "none";
-            }
+    function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            document.getElementById("topBtn").style.display = "block";
+        } else {
+            document.getElementById("topBtn").style.display = "none";
         }
+    }
 
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-    </script>
-    <button onclick="window.location.href='index.html'" id="homeBtn" title="Back to Home"> Home </button>
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
+</script>
+<button onclick="window.location.href='index.html'" id="homeBtn" title="Back to Home"> Home</button>
 </body>
 </html>
