--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <td> Wednesday</td>
         <td class="date">24/05/2017</td>
         <td class="time" align="center">09:30</td>
-        <td><a href="Maths-CourseNotes.pdf"> LI Math Techniques for Comp Sc (PDF) </a></td>
+        <td><a href="https://haruco3.github.io/lecture-notes/Maths.pdf"> LI Math Techniques for Comp Sc (PDF) </a></td>
         <td> New Gym</td>
         <td class="rr" style="display: none" align="center"> 197</td>
         <td class="sr" style="display: none" align="center"> 92</td>
@@ -358,7 +358,7 @@
         <td><p class="left" align="center" style="font-weight: bold"></p></td>
         <td>
             <div class="parentBar">
-                <div class="childBar" value="7" max="15"></div>
+                <div class="childBar" value="9" max="15"></div>
             </div>
         </td>
     </tr>
