--- a/softeng.html
+++ b/softeng.html
@@ -147,7 +147,7 @@ Table of contents (<a href="#" onclick="var expanded=this.innerHTML==='expand'; 
         <li><a href="#usecase1"> Use Case Diagram </a></li>
         <li><a href="#usecase2"> Use Case Description </a></li>
     </ul></li>
-    <li><a href="#sysdgn"> System Architecture </a><ul class="subtopic" style="display: none">
+    <li><a href="#sysdgn"> System Design </a><ul class="subtopic" style="display: none">
         <li><a href="#sysdgn1"> Major Activities </a></li>
         <li><a href="#sysdgn2"> Software Architecture </a></li>
     </ul></li>
@@ -1080,7 +1080,7 @@ Table of contents (<a href="#" onclick="var expanded=this.innerHTML==='expand'; 
     <li> <keyword>Wider perspective</keyword> of the system and environment. </li>
     <li> Goals provide a <keyword>rationale</keyword> for requirements. </li>
     <li> Can show whether a requirement specification is <keyword>complete</keyword>. </li>
-    <li> Diagrams show <keyword>pertinence</keyword> or relevance fo goals.</li>
+    <li> Diagrams show <keyword>pertinence</keyword> or relevance of goals.</li>
     <li> Provides <keyword>traceability</keyword> from high level objectives to low level requirements. </li>
     <li> Provides a natural <keyword>structure</keyword>. </li>
     <li> Can help detect <keyword>conflicts</keyword> between goals of different viewpoints. </li>
